# lifegame

./: LICENSE  README.md
src/: CMakeLists.txt  cell.cc  cell.hpp  cellset.cc  cellset.hpp  data.hpp  life.cc  status.hpp
